<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_tab_back"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="10dp"
                android:src="@drawable/ic_left_arrow_black" />

            <TextView
                android:id="@+id/tv_login_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="7"
                android:gravity="center_vertical"
                android:text="@string/login_or_sign_up"
                android:textColor="@color/black"
                android:textSize="19sp" />

        </LinearLayout>


    <RelativeLayout
        android:id="@+id/rl_login_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/input_phone_num"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_show_auto_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/tip_for_unresignature"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_86"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_show_auto_signin"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/cn_phone_prefix"
            android:textSize="19sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_login_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_show_auto_signin"
            android:layout_alignBottom="@+id/tv_86"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/tv_86"
            android:background="@null"
            android:paddingStart="10dp"
            android:paddingEnd="0dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/tv_86"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@color/app_background" />

        <TextView
            android:id="@+id/tv_login_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="190dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="110dp"
            android:background="@drawable/bg_home_experience"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/next_step"
            android:textColor="@android:color/white"
            android:textSize="15sp" />
    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/rl_captcha"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <TextView
                android:id="@+id/tv_capcha_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/veri_code_sent"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_captcha_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_capcha_title"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp" />

        <com.commodity.mylibrary.view.InviteCodeView
            android:id="@+id/captcha_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_captcha_phone"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <TextView
                android:textColor="@color/blue"
                android:layout_below="@+id/captcha_view"
                android:layout_marginStart="100dp"
                android:id="@+id/tv_captcha_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="37dp"
                tools:text="234" />

        </RelativeLayout>
    </LinearLayout>
