<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:background="@color/light_blue"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:fitsSystemWindows="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_weight="1"
            android:id="@+id/repaire_back"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:src="@drawable/back"
            android:textColor="#FFF"
            android:contentDescription="@string/back" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="5"
            android:text="发布交易信息"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="#FFF"/>
        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="40dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/order_show_success"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="@dimen/activity_horizontal_margin"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="创建成功"/>
        <TextView
            android:id="@+id/order_invite_code"
            android:textSize="@dimen/activity_horizontal_margin"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="您的邀请码是"/>

    </LinearLayout>
    <ScrollView
        android:id="@+id/order_setter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/base_info" />
            <LinearLayout
                android:layout_marginTop="5dp"
                android:background="#FFF"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/item_name"
                    android:textColor="#1E1C1C"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/order_name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:background="@null"
                    android:gravity="start|center"
                    android:hint="请输入商品名称"
                    android:lines="1"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:background="#FFF"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="商品单价"
                    android:textColor="#1E1C1C"
                    android:textSize="15sp" />
                <EditText
                    android:inputType="number|numberDecimal"
                    android:id="@+id/order_unit_price"
                    android:lines="1"
                    android:layout_weight="5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="start|center"
                    android:background="@null"
                    android:textSize="15sp"
                    android:hint="请输入商品单价"/>
            </LinearLayout>

            <LinearLayout
                android:background="#FFF"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="商品数量"
                    android:textColor="#1E1C1C"
                    android:textSize="15sp" />
                <EditText
                    android:inputType="number"
                    android:id="@+id/order_amount"
                    android:lines="1"
                    android:layout_weight="5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="start|center"
                    android:background="@null"
                    android:textSize="15sp"
                    android:hint="请输入数量"/>
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="佣金" />

            <LinearLayout
                android:layout_marginTop="5dp"
                android:background="#FFF"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="佣金(/件)"
                    android:textColor="#1E1C1C"
                    android:textSize="15sp" />
                <EditText
                    android:inputType="number|numberDecimal"
                    android:id="@+id/order_commission"
                    android:lines="1"
                    android:layout_weight="5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="start|center"
                    android:background="@null"
                    android:textSize="15sp"
                    android:hint="请输入单件佣金"/>
            </LinearLayout>

            <TextView
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="文件"/>

            <LinearLayout
                android:id="@+id/order_document"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#FFF">
                <TextView
                    android:paddingStart="10dp"
                    android:textColor="#000"
                    android:layout_weight="5"
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="合同文件"/>
                <TextView
                    android:id="@+id/order_document_desc"
                    android:gravity="center"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="请选择"/>
                <ImageView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/jingru"/>
            </LinearLayout>


            <TextView
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="详细描述"/>


            <EditText
                android:id="@+id/order_detail"
                android:padding="5dp"
                android:hint="输入详细描述"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:minHeight="8dp"
                android:minLines="8"
                android:maxLines="10"
                android:scrollbars="vertical"
                android:background="#fff" />

            <Button
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:id="@+id/order_submit"
                android:textColor="#FFF"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="提交"
                android:background="@color/light_blue"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
